[package]
name = "crawl2pump"
version = "0.1.0"
edition = "2021"
description = "Crawl the web for new and second-hand pumpfoil sets (Switzerland + worldwide)"
license = "GPL-3.0"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
scraper = "0.20"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
url = "2"
csv = "1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
base64 = "0.22"

[[bin]]
name = "crawl2pump"
path = "src/main.rs"

[[bin]]
name = "pumpfoil_report"
path = "src/bin/pumpfoil_report.rs"

[[bin]]
name = "meta_post"
path = "src/bin/meta_post.rs"

[lib]
name = "crawl2pump"
path = "src/lib.rs"
